@startuml

title __PedidosYa API's Class Diagram__\n

  package com.py.restaurants {
    package com.py.restaurants.pedidosya.api {
      class PyRestaurant {
          - name : String
          - categories : Set<String>
          + getName()
          + getCategories()
          ~ PyRestaurant()
          {static} + builder()
          + setName()
          + setCategories()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.pedidosya.api {
      class PyRestaurantBuilder {
          - name : String
          - categories : Set<String>
          ~ PyRestaurantBuilder()
          + name()
          + categories()
          + build()
          + toString()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.pedidosya.api {
      interface PyRestaurantService {
          {abstract} + findByCountryAndLocation()
      }
    }
  }
  

  package com.py.restaurants {
    package com.py.restaurants.pedidosya.api {
      class PyRestaurantServiceImpl {
          - restaurantsSearhUrl : String
          - restTemplate : RestTemplate
          + PyRestaurantServiceImpl()
          + findByCountryAndLocation()
          - makeRequest()
          - getStringHttpEntity()
          - getRestaurantSearchUrl()
      }
    }
  }
  

  PyRestaurant +-down- PyRestaurantBuilder
  PyRestaurantServiceImpl -up-|> PyRestaurantService
  PyRestaurantServiceImpl o-- PyAccessTokenManager : pyAccessTokenManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
